--- a/MysakBP/templates/index.html
+++ b/MysakBP/templates/index.html
@@ -413,8 +413,8 @@
         xatom.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
                 console.log(xatom.responseText);
-                /*images = JSON.parse(xatom.responseText);
-                changeImages();
+                images = JSON.parse(xatom.responseText);
+                /*changeImages();
                 */
             }
         };
